# dagger-contrib

./: Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: continuous-integration.yaml
dagger_contrib/: __init__.py
dagger_contrib/serializer/: __init__.py  as_yaml.py
dagger_contrib/serializer/dask/: __init__.py
dagger_contrib/serializer/dask/dataframe/: __init__.py  as_csv.py  as_parquet.py
dagger_contrib/serializer/pandas/: __init__.py  as_csv.py  as_parquet.py
dagger_contrib/serializer/pandas/dataframe/: __init__.py  as_csv.py  as_parquet.py
dagger_contrib/serializer/path/: __init__.py  as_tar.py  as_zip.py
tests/: __init__.py  test_dagger_contrib.py
tests/serializer/: __init__.py  test_as_yaml.py
tests/serializer/dask/: __init__.py
tests/serializer/dask/dataframe/: __init__.py  conftest.py  test_as_csv.py  test_as_parquet.py
tests/serializer/pandas/: __init__.py  test_as_csv.py  test_as_parquet.py
tests/serializer/pandas/dataframe/: __init__.py  conftest.py  test_as_csv.py  test_as_parquet.py
tests/serializer/path/: __init__.py  test_as_tar.py  test_as_zip.py
